[gd_scene load_steps=32 format=3 uid="uid://y8s0qmkthw2n"]

[ext_resource type="Script" uid="uid://ba5lk2jtb8hjh" path="res://Entities/Player/player.gd" id="1_3uyv8"]
[ext_resource type="Texture2D" uid="uid://bhjdhmitdap4w" path="res://Entities/Player/assets/player.png" id="1_mv1ah"]
[ext_resource type="Shader" uid="uid://7hk4efd43mx" path="res://Entities/Player/axe.gdshader" id="3_tekja"]
[ext_resource type="Texture2D" uid="uid://irbrs87p4ni5" path="res://Entities/Player/assets/axe.png" id="4_5c2io"]
[ext_resource type="Texture2D" uid="uid://clhi05bnfvhiq" path="res://Resources/point_light.tres" id="5_5c2io"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mv1ah"]
size = Vector2(4, 10)

[sub_resource type="Animation" id="Animation_lu8i8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_3uyv8"]
resource_name = "idle_down"
length = 2.0
loop_mode = 1
step = 0.6667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6667, 1.3334),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_tekja"]
resource_name = "idle_left"
length = 2.0
loop_mode = 1
step = 0.6667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6667, 1.3334),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [3, 4, 5]
}

[sub_resource type="Animation" id="Animation_5c2io"]
resource_name = "idle_right"
length = 2.0
loop_mode = 1
step = 0.6667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6667, 1.3334),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [6, 7, 8]
}

[sub_resource type="Animation" id="Animation_4wf4l"]
resource_name = "idle_up"
length = 2.0
loop_mode = 1
step = 0.6667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6667, 1.3334),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [9, 10, 11]
}

[sub_resource type="Animation" id="Animation_01a4e"]
resource_name = "move_down"
length = 0.3333
loop_mode = 2
step = 0.1667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1667, 0.3333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [12, 13, 14]
}

[sub_resource type="Animation" id="Animation_7a1se"]
resource_name = "move_left"
length = 0.3333
loop_mode = 2
step = 0.1667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1667, 0.3333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [15, 16, 17]
}

[sub_resource type="Animation" id="Animation_lub02"]
resource_name = "move_right"
length = 0.3333
loop_mode = 2
step = 0.1667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1667, 0.3333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [18, 19, 20]
}

[sub_resource type="Animation" id="Animation_x1y6q"]
resource_name = "move_up"
length = 0.3333
loop_mode = 2
step = 0.1667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1667, 0.3333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [21, 22, 23]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_01a4e"]
_data = {
&"RESET": SubResource("Animation_lu8i8"),
&"idle_down": SubResource("Animation_3uyv8"),
&"idle_left": SubResource("Animation_tekja"),
&"idle_right": SubResource("Animation_5c2io"),
&"idle_up": SubResource("Animation_4wf4l"),
&"move_down": SubResource("Animation_01a4e"),
&"move_left": SubResource("Animation_7a1se"),
&"move_right": SubResource("Animation_lub02"),
&"move_up": SubResource("Animation_x1y6q")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3uyv8"]
animation = &"idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lu8i8"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tekja"]
animation = &"idle_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5c2io"]
animation = &"idle_up"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_4wf4l"]
blend_point_0/node = SubResource("AnimationNodeAnimation_3uyv8")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_lu8i8")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_tekja")
blend_point_2/pos = Vector2(0, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_5c2io")
blend_point_3/pos = Vector2(0, -1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4wf4l"]
animation = &"move_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_01a4e"]
animation = &"move_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7a1se"]
animation = &"move_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lub02"]
animation = &"move_down"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_x1y6q"]
blend_point_0/node = SubResource("AnimationNodeAnimation_4wf4l")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_01a4e")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_7a1se")
blend_point_2/pos = Vector2(0, -1)
blend_point_3/node = SubResource("AnimationNodeAnimation_lub02")
blend_point_3/pos = Vector2(0, 1)
blend_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lu8i8"]
advance_mode = 2
advance_expression = "not self.velocity"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tekja"]
advance_mode = 2
advance_expression = "self.velocity"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3uyv8"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_01a4e"]
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_4wf4l")
states/Idle/position = Vector2(380.59998, 107.48)
states/Move/node = SubResource("AnimationNodeBlendSpace2D_x1y6q")
states/Move/position = Vector2(367, 9.400002)
transitions = ["Move", "Idle", SubResource("AnimationNodeStateMachineTransition_lu8i8"), "Idle", "Move", SubResource("AnimationNodeStateMachineTransition_tekja"), "Start", "Idle", SubResource("AnimationNodeStateMachineTransition_3uyv8")]
graph_offset = Vector2(81, -44)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4wf4l"]
shader = ExtResource("3_tekja")
shader_parameter/amount = 20

[node name="Player" type="CharacterBody2D"]
collision_mask = 6
script = ExtResource("1_3uyv8")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_mv1ah")
hframes = 3
vframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_mv1ah")

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_01a4e")
}
tree_root = SubResource("AnimationNodeStateMachine_01a4e")
advance_expression_base_node = NodePath("..")
parameters/Idle/blend_position = Vector2(0.0063694715, 0.66785717)
parameters/Move/blend_position = Vector2(0.01000905, 0.024999976)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(5, 5)

[node name="Rotation Point" type="Node2D" parent="."]
position = Vector2(0, 1)
scale = Vector2(-1, 1)

[node name="AnimationRotation" type="Node2D" parent="Rotation Point"]

[node name="Sprite2D2" type="Sprite2D" parent="Rotation Point/AnimationRotation"]
material = SubResource("ShaderMaterial_4wf4l")
position = Vector2(-19, 7)
rotation = -2.6179938
scale = Vector2(0.02, 0.02)
texture = ExtResource("4_5c2io")

[node name="TVDetection" type="Area2D" parent="Rotation Point"]
position = Vector2(0, -1)
rotation = 3.1415927
scale = Vector2(1, -1)
collision_layer = 16
collision_mask = 8

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Rotation Point/TVDetection"]
position = Vector2(0, -4)
polygon = PackedVector2Array(17, -2, 14, -12, 24, -2, 28, 6, 25, 14, 14, 24, 17, 14, 19, 6)

[node name="PointLight2D" type="PointLight2D" parent="."]
energy = 0.25
texture = ExtResource("5_5c2io")
texture_scale = 0.5

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.175
one_shot = true

[connection signal="body_entered" from="Rotation Point/TVDetection" to="." method="_on_tv_detection_body_entered"]
[connection signal="body_exited" from="Rotation Point/TVDetection" to="." method="_on_tv_detection_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
